--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,16 +9,22 @@ androidx-navigation = "2.7.7"
 androidx-room = "2.6.1"
 coil = "2.6.0"
 compose-compiler = "1.5.8"
+compose-version = "0.2.3"
 detekt = "1.23.5"
 hilt = "2.51.1"
+kaspresso = "1.5.3"
+kaspresso-compose-support = "1.5.3"
 kotlin = "1.9.22"
 kotlin-coroutines = "1.8.0"
 mockk = "1.13.10"
 moshi = "1.15.1"
 okhttp3 = "4.12.0"
 retrofit = "2.9.0"
+compose = "1.7.6"
 
 sdk = "34"
+ui-test = "1.5.4"
+core = "1.47.0"
 
 [libraries]
 aboutlibraries-compose = { module = "com.mikepenz:aboutlibraries-compose", version.ref = "aboutlibraries" }
@@ -31,10 +37,10 @@ androidx-compose-material = { module = "androidx.compose.material:material" }
 androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3", version = "1.2.0" }
 androidx-compose-ui = { module = "androidx.compose.ui:ui" }
-androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version = "1.6.7" }
-androidx-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest" }
-androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
-androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
+androidx-compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose" }
+androidx-compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
+androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
+androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayout", version = "2.1.4" }
 androidx-core = { module = "androidx.core:core-ktx", version = "1.12.0" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version = "1.0.0" }
@@ -60,9 +66,11 @@ androidx-test-espresso-core = { module = "androidx.test.espresso:espresso-core",
 androidx-test-espresso-intents = { module = "androidx.test.espresso:espresso-intents", version.ref = "androidx-espresso" }
 androidx-test-ext-junit = { module = "androidx.test.ext:junit", version = "1.1.5" }
 androidx-test-rules = { module = "androidx.test:rules", version = "1.5.0" }
+androidx-ui-test = { module = "androidx.compose.ui:ui-test", version.ref = "ui-test" }
 androidx-work-runtime = { module = "androidx.work:work-runtime-ktx", version = "2.9.0" }
 coil = { module = "io.coil-kt:coil", version.ref = "coil" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
+compose = { module = "io.github.kakaocup:compose", version.ref = "compose-version" }
 detekt-compose = { module = "io.nlopez.compose.rules:detekt", version = "0.3.11" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 detekt-kotlin-compiler = { module = "com.braisgabin.detekt:kotlin-compiler-wrapper", version = "0.0.4" }
@@ -73,6 +81,8 @@ google-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compil
 google-hilt-android-testing = { module = "com.google.dagger:hilt-android-testing", version.ref = "hilt" }
 google-material = { module = "com.google.android.material:material", version = "1.11.0" }
 junit = { module = "junit:junit", version = "4.13.2" }
+kaspresso = { module = "com.kaspersky.android-components:kaspresso", version.ref = "kaspresso" }
+kaspresso-compose-support = { module = "com.kaspersky.android-components:kaspresso-compose-support", version.ref = "kaspresso-compose-support" }
 kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlin-coroutines" }
 kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlin-coroutines" }
 kotlin-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlin-coroutines" }
@@ -89,6 +99,7 @@ squareup-okhttp3-logging-interceptor = { module = "com.squareup.okhttp3:logging-
 squareup-retrofit2 = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 squareup-retrofit2-converter-moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "retrofit" }
 timber = { module = "com.jakewharton.timber:timber", version = "5.0.1" }
+core = { group = "com.google.ar", name = "core", version.ref = "core" }
 
 [plugins]
 aboutlibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutlibraries" }
